log
Tue 23 Apr 2024 01:58:08 PM UTC: 
 tests:  0|6
total_score: 0/70
b4ed8f2
Tue 23 Apr 2024 02:18:57 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
460ee0e
Tue 23 Apr 2024 02:19:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
541313e
Tue 23 Apr 2024 02:19:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8fd90ff
Tue 23 Apr 2024 02:22:06 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
09293eb
Tue 23 Apr 2024 02:24:57 PM UTC: 
 hashmap.c | 31 ++++++++++++++++++++-----------
 1 file changed, 20 insertions(+), 11 deletions(-)
 tests:  5|4
total_score: 30/70
96a7b6f
Tue 23 Apr 2024 02:27:18 PM UTC: 
 hashmap.c | 21 ++++++++++++++-------
 1 file changed, 14 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 30/70
14e1f49
Tue 23 Apr 2024 02:33:57 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
76f7cfe
Tue 23 Apr 2024 02:36:22 PM UTC: 
 hashmap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
578231c
Tue 23 Apr 2024 02:36:57 PM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  8|3
total_score: 40/70
d6f4f9f
Tue 23 Apr 2024 02:37:21 PM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
41a36bf
Tue 23 Apr 2024 02:43:09 PM UTC: 
 hashmap.c | 20 +++++++++++++++-----
 1 file changed, 15 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
d9136cb
Tue 23 Apr 2024 02:43:37 PM UTC: 
 hashmap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
 tests:  8|3
total_score: 40/70
52e6cb5
Tue 23 Apr 2024 02:43:56 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
1c60c1e
Tue 23 Apr 2024 02:44:09 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|3
total_score: 40/70
fb0eaec
Tue 23 Apr 2024 02:44:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
6621122
Tue 23 Apr 2024 02:45:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
9347965
Tue 23 Apr 2024 02:59:15 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:156:22: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  156 |   if (map == NULL || key == NULL)
      |                      ^~~
      |                      key_t
hashmap.c:156:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:168:1: error: control reaches end of non-void function [-Werror=return-type]
  168 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31a2657
Tue 23 Apr 2024 02:59:42 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
6c1a020
Tue 23 Apr 2024 03:01:41 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  16|1
total_score: 60/70
7f36fa6
